# pyfst

./: .gitignore  Cargo.toml  README.md  default.nix  flake.nix  tox.ini
.github/workflows/: test.yml
src/: lib.rs
tests/: test_basic.py
