[package]
name = "pyfst"
version = "0.1.0"
authors = ["Robert T. McGibbon <rmcgibbo@gmail.com>"]
license = "MIT"
description = "Python bindings for the fst crate"

[lib]
name = "pyfst"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.1"
features = ["extension-module"]

[dependencies]
fst = "0.4"
fst-levenshtein = "^0.3.0"
fst-regex = "^0.3.0"
memmap = "^0.7"
anyhow = "^1.0"

[dev-dependencies.fst]
features = ["levenshtein"]